--- a/Produccion/index.html
+++ b/Produccion/index.html
@@ -4,10 +4,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>UBI Solutions - Unlimited Business Intelligence</title>
 
+    <title>UBI Solutions - Unlimited Business Intelligence</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 </head>
 
 
@@ -58,13 +64,10 @@
                     gestión de ventas</h3>
                 <h2 class="main__titulo2 animate__animated animate__fadeInDown">Más que inteligencia de negocios.. </h2>
                 <h1 class="main__titulo3 animate__animated animate__fadeInDown"> Unlimited Businness Intelligence</h1>
-
-
             </div>
         </div>
 
         <section id="main">
-
             <div class="main__space">
             </div>
             <h2 class="main__titulo">Quienes somos</h2>
