--- a/Produccion/index.html
+++ b/Produccion/index.html
@@ -27,18 +27,18 @@
         <nav class="header__menu animate__animated animate__flipInX">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="" class="nosotros">Nosotros</a>
-                    <ul>
+                <li><a href="about-us.html" class="nosotros">Nosotros</a>
+                    <!--<ul>
                         <li><a href="about-us.html" class="metodologias">Tecnologías</a></li>
                         <li><a href="about-us.html" class="about.us">Nuestra Empresa</a></li>
-                    </ul>
+                    </ul>-->
                 </li>
-                <li><a href="" class="servicios">Servicios</a>
-                    <ul>
+                <li><a href="services.html" class="servicios">Servicios</a>
+                    <!--<ul>
                         <li><a href="services.html" class="servicio_1">Desarrollo de sistemas</a></li>
                         <li><a href="services.html" class="servicio_2">Módulos E-Commerce & BI</a></li>
                         <li><a href="services.html" class="servicio_3">Sales Takes Order</a></li>
-                    </ul>
+                    </ul>-->
                 </li>
                 <li><a href="clients.html" class="clientes">Clientes</a></li>
                 <li><a href="contact.html" class="contacto">Contacto</a></li>
@@ -57,7 +57,7 @@
     </header>
 
     <main>
-        <div id="page__content">
+        <!--<div id="page__content">
             <div class="main__container">
                 <h3 class="main__titulo1 animate__animated animate__fadeInDown">Soluciones al alcance de tus necesidades
                     para ayudar a mejorar tu
@@ -65,7 +65,31 @@
                 <h2 class="main__titulo2 animate__animated animate__fadeInDown">Más que inteligencia de negocios.. </h2>
                 <h1 class="main__titulo3 animate__animated animate__fadeInDown"> Unlimited Businness Intelligence</h1>
             </div>
-        </div>
+        </div>-->
+
+        <section id="fh5co-home" data-section="home" style="background-image: url(images/pexels-photo-886465_2.jpeg);"
+            data-stellar-background-ratio="0.5">
+            <div class="gradient"></div>
+            <div class="container">
+                <div class="text-wrap">
+                    <div class="text-inner">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <h3 class="main__titulo1 animate__animated animate__fadeInDown">Soluciones al alcance de
+                                    tus necesidades
+                                    para ayudar a mejorar tu
+                                    gestión de ventas</h1>
+                                    <h2 class="main__titulo2 animate__animated animate__fadeInDown">Más que inteligencia
+                                        de negocios.. </h2>
+                                    <h1 class="main__titulo3 animate__animated animate__fadeInDown"><em> Unlimited
+                                            Business
+                                            Intelligence.</em> </h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section id="main">
             <div class="main__space">
