--- a/Produccion/index.html
+++ b/Produccion/index.html
@@ -14,8 +14,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
-
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
 
     <link rel="shortcut icon" href="icons/Logo-favicon.PNG">
 </head>
@@ -24,7 +26,8 @@
 <body>
 
     <header class="header">
-        <div class="header__logo ">
+        <!--<header role="banner" id="fh5co-header">-->
+        <div class="header__logo">
             <!--<a href="index.html"><img src="icons/Logo.JPG" alt="logo de mi empresa"> </a>-->
             <a class="header__brand" href="index.html"><span>UBI </span>Solutions</a>
         </div>
@@ -32,32 +35,57 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html" class="nosotros">Nosotros</a>
-                    <!--<ul>
-                        <li><a href="about-us.html" class="metodologias">Tecnologías</a></li>
-                        <li><a href="about-us.html" class="about.us">Nuestra Empresa</a></li>
-                    </ul>-->
                 </li>
                 <li><a href="services.html" class="servicios">Servicios</a>
-                    <!--<ul>
-                        <li><a href="services.html" class="servicio_1">Desarrollo de sistemas</a></li>
-                        <li><a href="services.html" class="servicio_2">Módulos E-Commerce & BI</a></li>
-                        <li><a href="services.html" class="servicio_3">Sales Takes Order</a></li>
-                    </ul>-->
                 </li>
                 <li><a href="clients.html" class="clientes">Clientes</a></li>
                 <li><a href="contact.html" class="contacto">Contacto</a></li>
             </ul>
-
-            <!---               
+        </nav>
+        <!--                  
             <aside class="header__language">
                 <h6> ¿Desea otro idioma?:</h6>
                 <input type="button" value="ESP">
                 <input type="button" value="ENG">
-            </aside>
-            -->
+            </aside>-->
+        <!---
+        <div class="fluid-container">
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                    <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse"
+                        data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
+                    <a class="navbar-brand" href="index.html"><span>UBI </span>Solutions</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="active"><a href="index.html" data-nav-section="home"><span>Home</span></a></li>
+                        <li><a href="about-us.html" data-nav-section="explore"><span>Nosotros</span></a></li>
+                        <li><a href="services.html" data-nav-section="testimony"><span>Servicios</span></a></li>
+                        <li><a href="clients.html" data-nav-section="pricing"><span>Clientes</span></a></li>
+                        <li><a href="contact.html" data-nav-section="services"><span>Contacto</span></a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>-->
 
+        <!--
+        <nav class="navbar navbar-default">
+            <div class="navbar-header">
+                <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar"><i></i></a>
+                <a class="navbar-brand" href="index.html"><span>UBI </span>Solutions</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about-us.html" class="nosotros">Nosotros</a></li>
+                    <li><a href="services.html" class="servicios">Servicios</a></li>
+                    <li><a href="clients.html" class="clientes">Clientes</a></li>
+                    <li><a href="contact.html" class="contacto">Contacto</a></li>
+                </ul>
+            </div>
         </nav>
-
+            -->
     </header>
 
     <main>
@@ -77,19 +105,19 @@
             <div class="container">
                 <div class="text-wrap">
                     <div class="text-inner">
-                        <div class="row">
-                            <div class="col-md-8">
-                                <h3 class="main__titulo1 animate__animated animate__fadeInDown">Soluciones al alcance de
-                                    tus necesidades
-                                    para ayudar a mejorar tu
-                                    gestión de ventas</h1>
-                                    <h2 class="main__titulo2 animate__animated animate__fadeInDown">Más que inteligencia
-                                        de negocios.. </h2>
-                                    <h1 class="main__titulo3 animate__animated animate__fadeInDown"><em> Unlimited
-                                            Business
-                                            Intelligence.</em> </h1>
-                            </div>
-                        </div>
+                        <!--<div class="row">-->
+                        <!--<div class="col-12 col-md-8">-->
+                        <h3 class="main__titulo1 animate__animated animate__fadeInDown">Soluciones al alcance de
+                            tus necesidades
+                            para ayudar a mejorar tu
+                            gestión de ventas</h1>
+                            <h2 class="main__titulo2 animate__animated animate__fadeInDown">Más que inteligencia
+                                de negocios.. </h2>
+                            <h1 class="main__titulo3 animate__animated animate__fadeInDown"><em> Unlimited
+                                    Business
+                                    Intelligence.</em> </h1>
+                            <!--</div>-->
+                            <!--</div>-->
                     </div>
                 </div>
             </div>
