--- a/Produccion/index.html
+++ b/Produccion/index.html
@@ -20,6 +20,10 @@
     <link rel="stylesheet" href="css/bootstrap.css">
 
     <link rel="shortcut icon" href="icons/Logo-favicon.PNG">
+
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 
@@ -31,7 +35,7 @@
             <!--<a href="index.html"><img src="icons/Logo.JPG" alt="logo de mi empresa"> </a>-->
             <a class="header__brand" href="index.html"><span>UBI </span>Solutions</a>
         </div>
-        <nav class="header__menu animate__animated animate__flipInX">
+        <div class="header__menu animate__animated animate__flipInX">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about-us.html" class="nosotros">Nosotros</a>
@@ -40,8 +44,11 @@
                 </li>
                 <li><a href="clients.html" class="clientes">Clientes</a></li>
                 <li><a href="contact.html" class="contacto">Contacto</a></li>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
             </ul>
-        </nav>
+        </div>
         <!--                  
             <aside class="header__language">
                 <h6> ¿Desea otro idioma?:</h6>
@@ -128,7 +135,8 @@
             </div>
             <h2 class="main__titulo">Quienes somos</h2>
             <div class="main__box-model">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                <p style="font-size:1.4vw">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
                     and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
                     leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
@@ -139,7 +147,7 @@
                     classical Latin literature from 45 BC, making it over 2000 years old.
 
                 </p>
-                <p>
+                <p style="font-size:1.4vw">
                     Richard McClintock, a Latin
                     professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
                     consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical
@@ -148,7 +156,7 @@
                     book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of
                     Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
                 </p>
-                <p>
+                <p style="font-size:1.4vw">
                     It is a long established fact that a reader will be distracted by the readable content of a page
                     when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
                     distribution of letters, as opposed to using 'Content here, content here', making it look like
@@ -235,6 +243,16 @@
         integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
         crossorigin="anonymous"></script>
 
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "header__menu") {
+                x.className += " responsive";
+            } else {
+                x.className = "header__menu";
+            }
+        }
+    </script>
 
 </body>
 
